feat: add Navbar

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -54,6 +54,6 @@
 }
 
 body {
-  background-image: linear-gradient(to right, #001f54, #b88923, #034078);
+  background: #fefcfb;
   color: white;
 }
