--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -53,7 +53,7 @@
   box-sizing: border-box;
 }
 
-body {
-  background: #fefcfb;
-  color: white;
-}
+/* body { */
+/*   background: #fefcfb; */
+/*   color: white; */
+/* } */
